src/objects/LeanData__LD_Business_Unit__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account_Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Business Unit Account Routing Deployment</relationshipLabel>
        <relationshipName>BU_Account_Routing_Deployment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Case_Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Business Unit Case Routing Deployment</relationshipLabel>
        <relationshipName>BU_Case_Routing_Deployment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Business Unit Contact Routing Deployment</relationshipLabel>
        <relationshipName>BU_Contact_Routing_Deployment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Business Unit Lead Routing Deployment</relationshipLabel>
        <relationshipName>BU_Lead_Routing_Deployment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity_Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Business Unit Opp Routing Deployment</relationshipLabel>
        <relationshipName>BU_Opp_Routing_Deployment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LD Business Unit</label>
    <nameField>
        <label>LD Business Unit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>